--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ header div:not(:nth-child(2)) {
     display: flex;
     gap: 25px;
     align-items: center;
-
 }
 
 header button {
@@ -97,7 +96,7 @@ header a {
     }
 
     &:hover>small {
-        background-color: #B60109;
+        background-color: #b60109;
     }
 }
 
@@ -108,68 +107,70 @@ header a {
     position: relative;
     width: 100%;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    background-color: #000;
+    color: #fff;
 }
 
-.img-container {
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
-.img-container .image {
-    width: 100%;
-    height: 100%;
-}
-
-.img-container .dark-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 70%;
-    height: 100%;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.4) 80%, rgba(0, 0, 0, 0) 100%);
+.hero-section .container {
+    width: 96%;
+    display: flex;
+    gap: 5%;
+    align-items: center;
 }
 
 .hero-content {
-    position: absolute;
-    z-index: 1;
-    left: 5%;
-    top: 34%;
-    width: 45%;
-    color: #fff;
+    flex: 3.2;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    gap: 8px;
+    padding: 7px;
+    width: 100%;
+    height: 58%;
+    box-sizing: border-box;
+    margin-top: 20px;
 }
 
-.hero-content .heading {
-    font-size: 62px;
-    line-height: 80px;
-    font-family: "Bold poppins";
+.hero-video {
+    flex: 6.5;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
-.hero-content .primary-link {
-    position: relative;
-    font-family: "bold poppins", "poppins", "sans-serif";
-    font-size: 20px;
+.hero-video iframe {
+    width: 100%;
+    height: 70%;
+    border-radius: 6px;
+}
+
+.hero-title {
+    font-size: 10px;
+    letter-spacing: 4px;
+    font-family: poppins;
+    color: rgba(214, 214, 214, 0.872);
+}
+
+.hero-content .hero-head {
+    font-size: 28px;
+    font-family: bold poppins;
+}
+
+.hero-para {
+    font-size: 12px;
+    color: rgba(214, 214, 214, 0.872);
+    text-align: justify;
+}
+
+.hero-content a {
     color: #fff;
-    display: block;
-
-    &>i {
-        position: absolute;
-        bottom: 20%;
-        margin-left: 6px;
-        color: #fff;
-        font-size: 10px;
-        background-color: red;
-        padding: 5px;
-        border-radius: 50px;
-        transform: rotate(308deg);
-    }
-
-    &:hover i {
-        background-color: darkred;
-    }
+    font-size: 15px;
+    margin-top: 12px;
 }
 
 /* END */
@@ -190,8 +191,10 @@ header a {
         background-color: red;
         padding: 5px;
         border-radius: 50px;
-        transform: rotate(308deg);
+    }
 
+    &>i.rotate {
+        transform: rotate(320deg);
     }
 
     &:hover i {
@@ -204,11 +207,11 @@ header a {
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin: 20px 0;
 }
 
 .container {
-    width: 93%;
+    width: 95%;
 }
 
 .featuredNewsHead {
@@ -241,7 +244,7 @@ header a {
 
 /* extra */
 body {
-    height: 1200px;
+    height: 10200px;
 }
 
 .featuredNewsRow1>div:nth-child(2) {
@@ -264,19 +267,19 @@ body {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-    padding: 8px 10px;
+    padding: 14px;
 
-    &>.boxesContent {
+    &>a>.boxesContent {
         width: 100%;
         height: 100%;
         display: flex;
         flex-direction: column;
 
-        &>:first-child {
+        &> :first-child {
             flex: 20;
         }
 
-        &>:last-child {
+        &> :last-child {
             flex: 80;
             display: flex;
             flex-direction: column;
@@ -298,37 +301,33 @@ body {
 .featuredNewsContent .box-1 {
     background-size: cover;
     background-position: center;
-    background-image: url("https://science.nasa.gov/wp-content/uploads/2024/11/hotneptune-1280c.jpeg");
-
+    background-image: url("https://www.nasa.gov/wp-content/uploads/2024/11/thanksgiving-2024-20-thanksgiving-2014.jpg");
 }
 
 .featuredNewsContent .box-2 {
     background-size: cover;
     background-position: center;
-    background-image: url("https://assets.science.nasa.gov/dynamicimage/assets/science/missions/xrism/News/2024/cygnus-x-3/Cyg_X-3_illustration_AC.jpg");
-
+    background-image: url("https://science.nasa.gov/wp-content/uploads/2024/11/hotneptune-1280c.jpeg");
 }
 
 .featuredNewsContent .box-3 {
     background-size: cover;
     background-position: center;
     background-image: url("https://science.nasa.gov/wp-content/uploads/2024/11/webb-stsci-01jcgz71j2wy7vrn04ypbyb5x4-2k.png");
-
 }
 
 .featuredNewsContent .box-4 {
     background-size: cover;
     background-position: center;
     background-image: url("https://www.nasa.gov/wp-content/uploads/2024/11/1-pia26443-spacecraft-illustration.jpg?resize=1536,864");
-
 }
 
 .featuredNewsContent .boxes .dark-overlay {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.4);
+    height: 99%;
+    background: linear-gradient(to left, rgba(0, 0, 0, 0.1) 20%, rgba(0, 0, 0, 0.8) 80%);
     position: absolute;
     z-index: -1;
 }
@@ -336,7 +335,6 @@ body {
 .featuredNewsRow2 {
     display: flex;
     gap: 8px;
-    color: #000;
     margin-top: 15px;
 }
 
@@ -346,6 +344,7 @@ body {
     gap: 10px;
     box-sizing: border-box;
     padding: 7px;
+    color: #000;
 }
 
 .featuredNewsRow2>.boxes h4 {
@@ -357,4 +356,306 @@ body {
     width: 80px;
     height: 80px;
     border-radius: 40px;
+}
+
+/* END */
+
+
+/* Image-container */
+.img-container {
+    width: 100%;
+    height: min-content;
+    position: relative;
+}
+
+.img-container .img-box {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 0;
+
+    & .dark-overlay {
+        background: linear-gradient(to left, rgba(0, 0, 0, 0.1) 30%, rgba(0, 0, 0, 0.8) 70%);
+        background: line;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 100%;
+        height: 99%;
+    }
+}
+
+.img-box .image {
+    width: 100%;
+    height: 100%;
+}
+
+.img-content {
+    position: absolute;
+    top: 35%;
+    width: 45%;
+    margin-left: 4%;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 14px;
+}
+
+.img-content .heading {
+    font-size: 72px;
+    font-family: bold poppins;
+    line-height: 80px;
+    margin-bottom: 10px;
+}
+
+.img-content a {
+    color: #fff;
+}
+
+/* END */
+
+/* human-space section styling */
+.humanSpace-container {
+    width: 100%;
+    /* height: min-content; */
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.humanSpace-container .row {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    gap: 20px;
+    margin-bottom: 5%;
+}
+
+.humanSpace-container .cols {
+    display: flex;
+    justify-content: center;
+    flex: 1;
+    width: 100%;
+    height: 100%;
+    position: relative;
+
+    &>.img-box {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        z-index: 0;
+
+        &>img {
+            width: 100%;
+            height: 100%;
+        }
+
+        &>.dark-overlay {
+            width: 100%;
+            height: 99%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            background-color: rgba(0, 0, 0, 0.4);
+        }
+    }
+
+    &>.info {
+        width: 80%;
+        height: 40%;
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: #fff;
+    }
+}
+
+.info i {
+    background-color: red;
+    padding: 4.5px;
+    font-size: 12px;
+    color: #fff;
+    width: 13px;
+    height: 13px;
+    border-radius: 11px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.info h4 {
+    font-size: 24px;
+    width: 50%;
+    font-family: bold poppins;
+}
+
+/* END */
+
+/* imageOfTheDay */
+.imageOfTheDay {
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+}
+
+.imageOfTheDayInner {
+    display: flex;
+    gap: 6%;
+    width: 100%;
+    height: 100%;
+}
+
+.imageOfTheDayContent {
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+}
+
+.imageOfTheDayContent>div:first-child {
+    flex: 3;
+    padding: 10px 0;
+    box-sizing: border-box;
+}
+
+.imageOfTheDayContent .heading {
+    font-size: 38px;
+    font-family: bold poppins;
+    line-height: 32px;
+}
+
+.imageOfTheDayContent .sub-head {
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.imageOfTheDayContent .para {
+    font-size: 15px;
+    margin: 12px 0;
+}
+
+.imageOfTheDayContent>div:nth-child(2) {
+    flex: 7;
+}
+
+.imageOfTheDay-container {
+    flex: 6;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    &>a>img {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.imageOfTheDayTitle {
+    letter-spacing: 7px;
+    font-size: 10px;
+    margin: 5px;
+}
+
+.imageOfTheDayLinks {
+    color: #000;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-weight: bold;
+    font-size: 15px;
+    margin-top: 4px;
+}
+
+.imageOfTheDay .right-arrows {
+    background-color: red;
+    border-radius: 10px;
+    width: 16px;
+    height: 16px;
+    padding: 1px;
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+/* END */
+
+
+/* aboutNASA styling */
+.aboutNASA {
+    background-color: #F6F6F6;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.aboutNASA .container {
+    display: flex;
+    justify-content: space-between;
+    /* align-items: flex-start; */
+    gap: 10%;
+    height: 80%;
+    /* background-color: aqua;   */
+    display: flex;
+    justify-content: center;
+}
+
+.aboutNASA-content {
+    flex: 6;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 8px;
+
+    & a.primary-link>i {
+        transform: none;
+    }
+}
+
+.aboutNASA-content h5 {
+    font-size: 18px;
+}
+
+.aboutNASA-content .heading {
+    font-size: 35px;
+    font-family: bold poppins;
+    width: 80%;
+    margin: 20px 0;
+}
+
+.video-container {
+    /* background-color: blue; */
+    flex: 6;
+
+    &>video {
+        width: 100%;
+        height: 100%;
+        border-radius: 16px;
+    }
+}
+
+
+/* END */
+
+/* explore-img-container styling */
+.explore-img-container {
+    position: relative;
+    width: 100%;
+    height: 95vh;
+}
+
+.explore-img-container .img-box {
+    width: 100%;
+    height: 100%;
+}   
+
+.explore-img-container  .img-content {
+    top: 15%;
 }
