--- a/style.css
+++ b/style.css
@@ -243,9 +243,9 @@ header a {
 }
 
 /* extra */
-body {
+/* body {
     height: 10200px;
-}
+} */
 
 .featuredNewsRow1>div:nth-child(2) {
     flex: 2.2;
@@ -326,7 +326,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 99%;
+    height: 100%;
     background: linear-gradient(to left, rgba(0, 0, 0, 0.1) 20%, rgba(0, 0, 0, 0.8) 80%);
     position: absolute;
     z-index: -1;
@@ -382,7 +382,7 @@ body {
         left: 0;
         z-index: 1;
         width: 100%;
-        height: 99%;
+        height: 100%;
     }
 }
 
@@ -419,7 +419,6 @@ body {
 /* human-space section styling */
 .humanSpace-container {
     width: 100%;
-    /* height: min-content; */
     display: flex;
     justify-content: center;
     margin: 20px 0;
@@ -454,7 +453,7 @@ body {
 
         &>.dark-overlay {
             width: 100%;
-            height: 99%;
+            height: 100%;
             position: absolute;
             top: 0;
             left: 0;
@@ -498,7 +497,7 @@ body {
 
 /* imageOfTheDay */
 .imageOfTheDay {
-    margin: 20px 0;
+    margin: 20px 0 10% 0;
     display: flex;
     justify-content: center;
 }
@@ -585,6 +584,75 @@ body {
 
 /* END */
 
+/* moreImagesSection styling */
+.moreImagesSection {
+    display: flex;
+    justify-content: center;
+}
+
+.moreImagesSection .heading {
+    font-size: 22px;
+    font-family: bold poppins;
+}
+
+.moreImagesSection .swiper {
+    height: 60vh;
+    width: 100%;
+    margin: 4% 0;
+}
+
+.swiper-slide {
+    cursor: grab;
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide .img-boxes {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    gap: 2%;
+
+}
+
+.swiper-slide .img-boxes>div:first-child {
+    height: 100%;
+    width: 65%;
+}
+
+.swiper-slide .img-boxes>div:nth-child(2) {
+    width: 33%;
+    display: flex;
+    gap: 3%;
+    flex-direction: column;
+}
+
+.img-boxes img {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide .content-boxes {
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    &>h5 {
+        margin-top: 7px;
+        font-size: 18px;
+        color: #000;
+
+    }
+
+    &>p {
+        font-size: 12px;
+        letter-spacing: 6px;
+        color: gray;
+    }
+}
+
+/* END */
 
 /* aboutNASA styling */
 .aboutNASA {
@@ -598,10 +666,8 @@ body {
 .aboutNASA .container {
     display: flex;
     justify-content: space-between;
-    /* align-items: flex-start; */
     gap: 10%;
     height: 80%;
-    /* background-color: aqua;   */
     display: flex;
     justify-content: center;
 }
@@ -631,7 +697,6 @@ body {
 }
 
 .video-container {
-    /* background-color: blue; */
     flex: 6;
 
     &>video {
@@ -640,7 +705,6 @@ body {
         border-radius: 16px;
     }
 }
-
 
 /* END */
 
@@ -654,8 +718,71 @@ body {
 .explore-img-container .img-box {
     width: 100%;
     height: 100%;
-}   
+}
 
-.explore-img-container  .img-content {
+.explore-img-container .img-content {
     top: 15%;
+}
+
+/* END */
+
+
+/* topic of nasa styling */
+.topicsOfNasa {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+    height: 170vh;
+}
+
+.topicsOfNasa .row {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin-bottom: 5%;
+}
+
+.topicsOfNasa .cols {
+    display: flex;
+    justify-content: center;
+    /* flex: ; */
+    width: 22%;
+    height: 100%;
+    position: relative;
+
+    &>.img-box {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        z-index: 0;
+
+        &>img {
+            width: 100%;
+            height: 100%;
+        }
+
+        &>.dark-overlay {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            background-color: rgba(0, 0, 0, 0.4);
+        }
+    }
+
+    &>.info {
+        width: 80%;
+        height: 40%;
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: #fff;
+    }
 }
