--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --gray: #b9b9bb;
+}
+
 @font-face {
     font-family: poppins;
     src: url("./assets/fonts/Poppins-Regular.ttf");
@@ -740,7 +744,7 @@ header a {
     width: 100%;
     height: 70vh;
     display: flex;
-    gap: 20px;
+    gap: 7px;
     flex-wrap: wrap;
     margin-bottom: 5%;
 }
@@ -749,7 +753,7 @@ header a {
     display: flex;
     justify-content: center;
     /* flex: ; */
-    width: 22%;
+    width: 24%;
     height: 100%;
     position: relative;
 
@@ -786,3 +790,140 @@ header a {
         color: #fff;
     }
 }
+
+/* footer styling */
+footer {
+    background-color: #000;
+    color: #fff;
+    /* height: 90vh; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 140vh;
+}
+
+.footer-container {
+    width: 95%;
+    height: 90%;
+}
+
+.footer-logo {
+    width: 70px;
+    height: 70px;
+}
+
+.footer-content {
+    margin-top: 10px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5%;
+}
+
+.footer-content>div>h6 {
+    font-size: 20px;
+}
+
+.footer-content p {
+    font-size: 0.9rem;
+    color: var(--gray);
+}
+
+.footer-content a {
+    color: #fff;
+    font-size: 14px;
+}
+
+.footer-content a:hover {
+    text-decoration: underline dashed;
+}
+
+.footer-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 12px;
+    width: 30%;
+
+}
+
+.footer-links-container {
+    width: 40%;
+    height: 24%;
+    position: relative;
+    z-index: 1;
+}
+
+.footer-links-container>ul {
+    list-style: none;
+    display: flex;
+    gap: 10px;
+    height: 100%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.footer-follow-links {
+    width: 20%;
+    height: 24%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-follow-links>div {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    &>div:first-child {
+        color: var(--gray);
+    }
+}
+
+.footer-follow-links .linksInIcons {
+    display: flex;
+    gap: 5px;
+    justify-content: space-between;
+    width: 80%;
+
+    &>a {
+        background-color: #222222;
+        padding: 5px;
+        width: 18px;
+        height: 18px;
+        border-radius: 11.5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &>i {
+            font-size: 15px;
+        }
+    }
+}
+
+.footer-others-links {
+    width: 100%;
+    display: flex;
+    gap: 12px;
+    flex-wrap: wrap;
+    background-color: green;
+}
+
+.footer-others-links>ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 26px;
+
+    &>li>a {
+        color: var(--gray);
+
+    }
+}
+
+/* END */
