--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ header a {
     flex: 6;
     display: flex;
     justify-content: end;
+    align-items: center;
     width: 100%;
     height: 100%;
 }
