--- a/styles/style.css
+++ b/styles/style.css
@@ -679,7 +679,7 @@ header a {
 /* aboutNASA styling */
 .aboutNASA {
     background-color: #F6F6F6;
-    height: 90vh;
+    min-height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -755,12 +755,10 @@ header a {
     display: flex;
     justify-content: center;
     margin: 20px 0;
-    height: 170vh;
 }
 
 .topicsOfNasa .row {
     width: 100%;
-    height: 70vh;
     display: flex;
     gap: 7px;
     flex-wrap: wrap;
@@ -772,7 +770,7 @@ header a {
     justify-content: center;
     /* flex: ; */
     width: 24%;
-    height: 100%;
+    height: auto;
     position: relative;
 
     &>.img-box {
