--- a/styles/style.css
+++ b/styles/style.css
@@ -120,7 +120,7 @@ header a {
 .hero-section {
     position: relative;
     width: 100%;
-    height: 80vh;
+    min-height: 90vh;
     display: flex;
     justify-content: center;
     background-color: #000;
@@ -230,7 +230,8 @@ header a {
     width: 95%;
 }
 
-.featuredNewsHead , .humanSpaceHead {
+.featuredNewsHead,
+.humanSpaceHead {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -766,7 +767,7 @@ header a {
     /* flex: ; */
     width: 24%;
     height: auto;
-min-height: 350px;
+    min-height: 350px;
     position: relative;
 
     &>.img-box {
